# longbridge-terminal

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURE_GAP_ANALYSIS.md  Makefile  README.md  README.zh-CN.md  build.rs  install  install.ps1
.cargo/: config.toml
.claude/: settings.local.json
.claude/skills/: worktrees.md
.github/workflows/: release-to-oss.yml  release.yml  test-install.yml  test-oss-backup.yml  test-update.yml  test.yml  update-homebrew.yml  update-scoop.yml
.scoop/: longbridge.json  longport.json
assets/: banner.txt
crates/cli-candlestick-chart/: Cargo.toml
crates/cli-candlestick-chart/examples/: basic-with-csv-parsing.rs
crates/cli-candlestick-chart/src/: chart_renderer.rs  line_chart.rs
crates/sec2md/: Cargo.toml
crates/sec2md/src/: lib.rs
crates/sec2md/tests/: integration.rs
crates/sec2md/tests/fixtures/: AAPL_10-Q.html  AAPL_10-Q.md  NVDA_FORM4.html  NVDA_FORM4.md  TSLA_8K.html  TSLA_8K.md
data/: ETF.csv  IX.csv
docs/: cli-design.md  cli-test-plan.md  individual-stock-features.md  phase1_dirty_flags_implementation.md  rate_limiting.md
locales/: en.yml  zh-CN.yml  zh-HK.yml
scripts/: mock-server.ts  test-commands.ts  update-readme-commands.sh  update-scoop-manifest.sh
skills/longbridge/: SKILL.md
skills/longbridge/references/: quote-commands.md  statement-commands.md  watchlist-commands.md
snap/: snapcraft.yaml
src/: app.rs  auth.rs  kline.rs  locale.rs  logger.rs  main.rs  region.rs  secure_storage.rs  system.rs  update.rs
src/api/: account.rs  quote.rs  search.rs
src/cli/: aip.rs  api.rs  asset.rs  atm.rs  auth.rs  check.rs  compare.rs  completion.rs  daily_coin.rs  dca.rs  fundamental.rs  html_render.html  html_render.rs  image.rs  init.rs  insider_trades.rs  investors.rs  ipo.rs  mod.rs  my_quote.rs  news.rs  output.rs  quant_render.rs  quote.rs  run_script.rs  schema.rs  screener.rs  search.rs  sec_edgar.rs  sharelist.rs  statement.rs  topic.rs  trade.rs  watchlist.rs
src/cli/html_render/: ah_premium.js  business_segments.js  capital_dist.js  capital_flow.js  depth.js  financial_report.js  financial_report_latest.js  financial_statement.js  industry_rank.js  industry_valuation.js  industry_valuation_dist.js  institution_rating.js  institution_rating_history.js  institution_rating_industry_rank.js  intraday.js  kline.js  market_temp.js  market_temp_current.js  option_volume_daily.js  portfolio.js  profit_analysis.js  short_positions.js  trade_stats.js  (+2 more)
src/data/: mod.rs  statement.rs  stock.rs  stocks.rs  types.rs  user.rs  watchlist.rs  ws.rs
src/helper/: decimal_ext.rs  number.rs
src/mcp/: mod.rs  protocol.rs  server.rs
src/openapi/: account.rs  context.rs  helpers.rs  mod.rs  quote.rs  rate_limiter.rs  search.rs  wrapper.rs
src/os/: unix.rs  windows.rs
src/render/: dirty_flags.rs
src/systems/: common.rs  mod.rs  portfolio.rs  stock_detail.rs  stock_news.rs  watchlist.rs  watchlist_stock.rs
src/tui/: app.rs  init.rs  input.rs  keymap.rs  keys.rs  kline.rs  mod.rs  mouse.rs  mouse_input.rs  nav.rs  popup.rs
src/ui/: assets.rs  content.rs  rect.rs  styles.rs
src/utils/: api_cache.rs  counter.rs  datetime.rs  mod.rs  number.rs  option_greeks.rs  text.rs
src/views/: footer.rs  help.rs  navbar.rs  popup.rs
src/widgets/: ansi.rs  log_panel.rs  logo.rs  mod.rs  search.rs  terminal.rs
tests/: branding.rs  schema_cli.rs  schema_live.rs
(+35 files in other folders)
