[package]
name = "sec2md"
version = "0.19.2"
edition = "2021"

[dependencies]
scraper = "0.22"

[dev-dependencies]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cast_possible_truncation = "allow"
ignored_unit_patterns = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
